/**
 * MIT License
 * Copyright (c) 2020 Fonoster Inc
 *
 * The Storage proto contains the artificats for bucket and objects
 * management.
 */
syntax = "proto3";

package yaps.storage.v1alpha1;

service Storage {
    rpc UploadObject (stream UploadObjectRequest) returns (UploadObjectResponse) {};
}

message UploadObjectRequest {
    string name = 1;
    string bucket = 2;
    bytes chunks = 3;
}

message UploadObjectResponse {
    // File size in bytes
    int32 size = 1;
}
